--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <meta name="description"
     content="A heartfelt birthday gift for Chandrika Kondamudi - a cinematic journey of memories and celebrations" />
   <title>Happy Birthday Chandrika</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
