--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="A heartfelt birthday gift for Chandrika Kondamudi - a cinematic journey of memories and celebrations" />
-  <title>Happy Birthday Chandrika</title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    content="A heartfelt birthday gift for Jane Doe - a cinematic journey of memories and celebrations" />
+  <title>Happy Birthday Jane Doe</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
