--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="A heartfelt birthday gift for Jane Doe - a cinematic journey of memories and celebrations" />
-  <title>Happy Birthday Jane Doe</title>
+  <meta name="description" content="A heartfelt birthday gift - a cinematic journey of memories and celebrations" />
+  <title>Happy Birthday</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
